December-2013 - 0.9.0.3RC1
- Bugfix: ADIF was not properly imported when Fields where using the Type of data optional field preventing logs from Logger32 being imported. (TNX EB1TR)
- Bugfix: QSL Sent/Received status in the search box were switched.
- KLog recognizes now .ADIF files (instead of only .ADI).
- KLog shows now the WAZ status.
- It is possible to find QSL pending to receive.
- GUI: Added a button to rescore awards.
- GUI: Added a button to update the search Box without modifying the text.
- GUI: Updates Bearing/distance/... when changing Locator.
- GUI: When the QRZ lineedit is blank or the clear button is clicked, entity info is deleted (beam, distance, ...).
- GUI: The IOTA continent is updated when the QRZ is modified.
- GUI: DXCLuster input is disabled when not connected.
- GUI: Corrected the behaviour of the status bar.

November-2014 - 0.9.0.2
- Bugfix: Right-click on search result sometimes caused KLog to crash.

November-2014 - 0.9.0.1
- Bugfix: Selected DX-Cluster servers were not used to connect. (TNX DL6FBS)

November-2014 - 0.9.0
- Ensures the ASCII requirement of ADIF.
- Updated the Preferences dialog.
- Added the About Qt help menu.
- Bugfix: Selected DX-Cluster servers were not used to connect.
- Bugfix: When selecting QSL received/sent with right click, date was not updated.
- Bugfix: Fixed the FileManager::adifReadLog to be able to read logs with several lines per QSO.
- Some other minor bugfixes.
- New feature: It is possible to show Imperial System (Miles instead of Km) data. (TNX - KF5JNU)
- New feature: It is possible to mark/look for & export requested QSL.
- New feature: It is possible to automatically mark(or not) a QSL as requested by the DX when the DX's card is received.
- New feature: It is possible to show (or not) the callsign used in the search box.
- New feature: KLog uses bigcty.csv for normal DX & will use cty.csv for contesting.

April-2014 - 0.7.1
- Backport to Qt 4.8.