@@ -1,6 +1,7 @@
 December-2013 - 0.9.0.3RC1
 - Bugfix: ADIF was not properly imported when Fields where using the Type of data optional field preventing logs from Logger32 being imported. (TNX EB1TR)
 - Bugfix: QSL Sent/Received status in the search box were switched.
+- Bugfix: CTY.CSV was not updated if the file was already existing.
 - KLog recognizes now .ADIF files (instead of only .ADI).
 - KLog shows now the WAZ status.
 - It is possible to find QSL pending to receive.
